Adding smol and formatting

--- a/java_migration/notebooks/repo_feature_analysis.ipynb
+++ b/java_migration/notebooks/repo_feature_analysis.ipynb
@@ -14,9 +14,10 @@
     "\n",
     "df = pd.read_csv(\"/workspaces/java-migration-paper/data/10k_repo_features.csv\")\n",
     "\n",
+    "\n",
     "def trim_data(data, thresh=0.95):\n",
     "    p = np.percentile(data, 95)\n",
-    "    return data[data <= p]\n"
+    "    return data[data <= p]"
    ]
   },
   {
@@ -74,7 +75,6 @@
     }
    ],
    "source": [
-    "\n",
     "fig, axes = plt.subplots(1, 1, figsize=(5, 5))\n",
     "\n",
     "sns.histplot(\n",
@@ -195,8 +195,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "cols = [\n",
     "    \"number_of_external_dependencies\",\n",
     "    \"number_of_java_files\",\n",
