--- a/java_migration/notebooks/agent_trace_analysis.ipynb
+++ b/java_migration/notebooks/agent_trace_analysis.ipynb
@@ -6,27 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from java_migration.eval.smol_log_parser import parse_log\n",
-    "from pathlib import Path\n",
-    "import numpy as np\n",
-    "from java_migration.eval.utils import recover_safe_repo_name\n",
-    "import yaml\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "from java_migration.utils import REPO_ROOT\n",
     "import os\n",
     "from collections.abc import MutableMapping\n",
-    "from java_migration.eval.maven_build_verifier import MavenBuildVerifier\n",
-    "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
+    "\n",
     "import matplotlib.cm as cm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import yaml\n",
+    "\n",
     "from java_migration.analysis.utils import (\n",
-    "    get_maven_logs,\n",
     "    MavenStatus,\n",
-    "    visualize_agent_trace,\n",
     "    flatten,\n",
     "    get_experiment_data,\n",
-    ")"
+    "    get_maven_logs,\n",
+    "    visualize_agent_trace,\n",
+    ")\n",
+    "from java_migration.eval.maven_build_verifier import MavenBuildVerifier\n",
+    "from java_migration.eval.smol_log_parser import parse_log\n",
+    "from java_migration.eval.utils import recover_safe_repo_name\n",
+    "from java_migration.utils import REPO_ROOT"
    ]
   },
   {
