--- a/java_migration/notebooks/agent_run_analysis.ipynb
+++ b/java_migration/notebooks/agent_run_analysis.ipynb
@@ -17,13 +17,9 @@
     "import seaborn as sns\n",
     "import yaml\n",
     "\n",
-    "from java_migration.analysis.utils import (\n",
-    "    MavenStatus,\n",
-    "    flatten,\n",
-    "    get_experiment_data,\n",
-    "    get_maven_logs,\n",
-    "    visualize_agent_trace,\n",
-    ")\n",
+    "from java_migration.analysis.utils import (MavenStatus, flatten,\n",
+    "                                           get_experiment_data, get_maven_logs,\n",
+    "                                           visualize_agent_trace)\n",
     "from java_migration.eval.maven_build_verifier import MavenBuildVerifier\n",
     "from java_migration.eval.smol_log_parser import parse_log\n",
     "from java_migration.eval.utils import recover_safe_repo_name\n",
@@ -619,7 +615,9 @@
     "            cur_feats[\"run_duration\"] = np.sum([y.meta.duration for y in repo_data[\"agent_log\"].steps])\n",
     "            cur_feats[\"input_tokens\"] = repo_data[\"agent_log\"].steps[-1].meta.input_tokens\n",
     "            cur_feats[\"output_tokens\"] = repo_data[\"agent_log\"].steps[-1].meta.output_tokens\n",
-    "            cur_feats[\"cost\"] = cur_feats[\"input_tokens\"] * 0.15 / 1_000_000 + cur_feats[\"output_tokens\"] * 0.6 / 1_000_000\n",
+    "            cur_feats[\"cost\"] = (\n",
+    "                cur_feats[\"input_tokens\"] * 0.15 / 1_000_000 + cur_feats[\"output_tokens\"] * 0.6 / 1_000_000\n",
+    "            )\n",
     "            cur_feats[\"num_steps\"] = len(repo_data[\"agent_log\"].steps)\n",
     "            if len(repo_data[\"agent_log\"].steps) > 1:\n",
     "                if repo_data[\"agent_log\"].steps[-2].raw_text:\n",
