--- a/java_migration/notebooks/agent_trace_analysis.ipynb
+++ b/java_migration/notebooks/agent_trace_analysis.ipynb
@@ -17,13 +17,9 @@
     "import seaborn as sns\n",
     "import yaml\n",
     "\n",
-    "from java_migration.analysis.utils import (\n",
-    "    MavenStatus,\n",
-    "    flatten,\n",
-    "    get_experiment_data,\n",
-    "    get_maven_logs,\n",
-    "    visualize_agent_trace,\n",
-    ")\n",
+    "from java_migration.analysis.utils import (MavenStatus, flatten,\n",
+    "                                           get_experiment_data, get_maven_logs,\n",
+    "                                           visualize_agent_trace)\n",
     "from java_migration.eval.maven_build_verifier import MavenBuildVerifier\n",
     "from java_migration.eval.smol_log_parser import parse_log\n",
     "from java_migration.eval.utils import recover_safe_repo_name\n",
