Updating env checker to support multiple java versions

--- a/java_migration/notebooks/agent_run_analysis.ipynb
+++ b/java_migration/notebooks/agent_run_analysis.ipynb
@@ -6,24 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from collections.abc import MutableMapping\n",
     "from pathlib import Path\n",
     "\n",
-    "import matplotlib.cm as cm\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import yaml\n",
     "\n",
-    "from java_migration.analysis.utils import (MavenStatus, flatten,\n",
-    "                                           get_experiment_data, get_maven_logs,\n",
-    "                                           visualize_agent_trace)\n",
-    "from java_migration.eval.maven_build_verifier import MavenBuildVerifier\n",
-    "from java_migration.eval.smol_log_parser import parse_log\n",
-    "from java_migration.eval.utils import recover_safe_repo_name\n",
-    "from java_migration.utils import REPO_ROOT"
+    "from java_migration.analysis.utils import flatten, get_experiment_data"
    ]
   },
   {
