Maven pom editing

--- a/java_migration/notebooks/agent_run_analysis copy.ipynb
+++ b/java_migration/notebooks/agent_run_analysis copy.ipynb
@@ -691,7 +691,7 @@
     }
    ],
    "source": [
-    "df[(df.build_result_test_success == False) | (df.build_result_build_success == False)].repo_name.tolist()\n",
+    "df[(not df.build_result_test_success) | (not df.build_result_build_success)].repo_name.tolist()\n",
     "\n",
     "\n",
     "# ['EnterpriseQualityCoding/FizzBuzzEnterpriseEdition',\n",
