--- a/java_migration/notebooks/agent_trace_analysis.ipynb
+++ b/java_migration/notebooks/agent_trace_analysis.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from java_migration.analysis.utils import (MavenStatus, get_experiment_data,\n",
-    "                                           get_maven_logs,\n",
-    "                                           visualize_agent_trace)"
+    "from java_migration.analysis.utils import MavenStatus, get_experiment_data, get_maven_logs, visualize_agent_trace"
    ]
   },
   {
