--- a/java_migration/notebooks/analyze_licenses.ipynb
+++ b/java_migration/notebooks/analyze_licenses.ipynb
@@ -564,7 +564,7 @@
     }
    ],
    "source": [
-    "pd.set_option('display.max_colwidth', 200) \n",
+    "pd.set_option(\"display.max_colwidth\", 200)\n",
     "df[df.license == \"NO_LICENSE\"].repo.apply(lambda x: \"http://github.com/\" + x)"
    ]
   },
@@ -576,16 +576,16 @@
    "outputs": [],
    "source": [
     "extra_permissive = [\n",
-    "\"Yubico/java-u2flib-server\",\n",
-    "\"hibernate-performance\",\n",
-    "\"cowtowncoder/low-gc-membuffers\",\n",
-    "\"mangstadt/ez-vcard\",\n",
-    "\"scijava/native-lib-loader\",\n",
-    "\"stephenc/high-scale-lib\",\n",
-    "\"wkennedy/swagger4spring-web\",\n",
-    "\"Atmosphere/nettosphere\",\n",
-    "\"tcplugins/tcWebHooks\",\n",
-    "\"demoiselle/framework\"\n",
+    "    \"Yubico/java-u2flib-server\",\n",
+    "    \"hibernate-performance\",\n",
+    "    \"cowtowncoder/low-gc-membuffers\",\n",
+    "    \"mangstadt/ez-vcard\",\n",
+    "    \"scijava/native-lib-loader\",\n",
+    "    \"stephenc/high-scale-lib\",\n",
+    "    \"wkennedy/swagger4spring-web\",\n",
+    "    \"Atmosphere/nettosphere\",\n",
+    "    \"tcplugins/tcWebHooks\",\n",
+    "    \"demoiselle/framework\",\n",
     "]"
    ]
   },
