--- a/java_migration/notebooks/data_cleaning.ipynb
+++ b/java_migration/notebooks/data_cleaning.ipynb
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "repo_features = pd.read_csv('../data/new_repo_build_data/repo_features.csv')\n",
+    "repo_features = pd.read_csv(\"../data/new_repo_build_data/repo_features.csv\")\n",
     "repo_features.head()"
    ]
   },
@@ -213,31 +213,31 @@
    ],
    "source": [
     "for item in full_dataset:\n",
-    "    if not item.get('repo_name'):\n",
+    "    if not item.get(\"repo_name\"):\n",
     "        print(item)\n",
-    "    repo_name = item['repo_name'].replace('/', '_')\n",
+    "    repo_name = item[\"repo_name\"].replace(\"/\", \"_\")\n",
     "    # search the test counts information from the jdk8 build results\n",
     "    for build_result in build_results:\n",
-    "        if build_result['repo_name'].lower() == repo_name.lower():\n",
+    "        if build_result[\"repo_name\"].lower() == repo_name.lower():\n",
     "            # obtain the test counts\n",
-    "            test_item= build_result.get('test')\n",
+    "            test_item = build_result.get(\"test\")\n",
     "            if test_item:\n",
-    "                test_results = test_item.get('tests')\n",
+    "                test_results = test_item.get(\"tests\")\n",
     "                if test_results:\n",
     "                    print(test_results)\n",
-    "                    item['test_count'] = test_results\n",
+    "                    item[\"test_count\"] = test_results\n",
     "    # search for repo features information from the repo_features.csv\n",
     "    for index, row in repo_features.iterrows():\n",
-    "        \n",
-    "        if row['repo_name'].split('.')[0].lower() == item['repo_name'].replace('/', '-').lower():\n",
-    "            repo_item = { 'build_tool': row['build_tool'], \n",
-    "                          'num_external_dependencies': row['number_of_external_dependencies'],\n",
-    "                         'num_java_files': row['number_of_java_files'],\n",
-    "                         'lines_of_code': row['number_of_lines_of_code'],\n",
-    "                         'num_modules': row['number_of_modules'],\n",
-    "                         'num_unit_tests': row['number_of_unit_tests'],\n",
-    "                         }\n",
-    "            item['repo_features'] = repo_item\n"
+    "        if row[\"repo_name\"].split(\".\")[0].lower() == item[\"repo_name\"].replace(\"/\", \"-\").lower():\n",
+    "            repo_item = {\n",
+    "                \"build_tool\": row[\"build_tool\"],\n",
+    "                \"num_external_dependencies\": row[\"number_of_external_dependencies\"],\n",
+    "                \"num_java_files\": row[\"number_of_java_files\"],\n",
+    "                \"lines_of_code\": row[\"number_of_lines_of_code\"],\n",
+    "                \"num_modules\": row[\"number_of_modules\"],\n",
+    "                \"num_unit_tests\": row[\"number_of_unit_tests\"],\n",
+    "            }\n",
+    "            item[\"repo_features\"] = repo_item"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/migration_datasets/full_dataset_modified.yaml', 'w') as file:\n",
+    "with open(\"../data/migration_datasets/full_dataset_modified.yaml\", \"w\") as file:\n",
     "    yaml.dump(full_dataset, file, default_flow_style=False)"
    ]
   },
